# immunis-acin

./: .env.example  .gitignore  BUILD_LOG.md  FRONTEND_BLUEPRINT.md  IMMUNIS_ACIN.md  README.md  SESSION_CONTEXT.md  pyproject.toml  requirements.txt  run.bat  temp.txt  test_pipeline.py
backend/: __init__.py  config.py  main.py  orchestrator.py
backend/agents/: __init__.py  antibody_synthesiser.py  evolution_tracker.py  game_theorist.py  immune_memory.py  incident_analyst.py  mesh_broadcaster.py  red_agent.py  variant_recogniser.py  visual_analyst.py
backend/battleground/: __init__.py  arbiter.py  arena.py  autonomous_loop.py
backend/compliance/: __init__.py  framework.py  reporter.py
backend/deception/: __init__.py  canary.py  capture.py  honeypot.py
backend/lingua/: __init__.py  ingestion.py  translator.py  voice.py
backend/math_engines/: __init__.py  actuarial.py  epidemiological.py  game_theory.py  pid_controller.py  portfolio.py  surprise.py
backend/mesh/: __init__.py  crypto.py  gossip.py  node.py  stix_taxii.py
demo/: scenario_full.py  seed_dashboard.py  simple_seed.py
docs/: architecture.md  mathematical_foundations.md  security_assessment.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1778205603179-34bfad5b220108.mjs
space/: README.md  app.py  requirements.txt
tests/: __init__.py  conftest.py
training/: __init__.py  evaluate.py  generate_data.py  train_adversary.py  train_all_rocm.py  train_sentinel.py  train_vision.py
validation/: README.md  full_validation.py
(+171 files in other folders)
